--- a/Ong_I/index.html
+++ b/Ong_I/index.html
@@ -45,7 +45,7 @@
     nav a:hover { color: var(--dourado); }
 
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('img/hero.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('assets/images/logo.png') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 5rem 1rem;
