--- a/Ong_I/projetos.html
+++ b/Ong_I/projetos.html
@@ -50,7 +50,7 @@
       color: var(--dourado);
     }
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/projetos-hero.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('assets/images/logo.png') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 5rem 1rem;
